feat: patch base